# kiroku-memory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.ja.md  CLAUDE.md  CLAUDE.zh-TW.md  LICENSE  README.ja.md  README.md  README.zh-TW.md  SESSION_STATE.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: release.yml
commands/: forget.md  memory-status.md  recall.md  remember.md
desktop/: .gitignore  README.ja.md  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/design-system/: DESIGN.md
desktop/src/: App.tsx  i18n.ts  main.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  main.rs  service.rs
docs/: architecture.md  claude-code-integration.md  installation-guide.ja.md  installation-guide.md  installation-guide.zh-TW.md  integration-guide.md  macos-code-signing.md  macos-unsigned-app-legacy.md  renaming-changelog.md  surrealdb-migration-plan.md  surrealdb-setup.md  user-guide.md
hooks/: hooks.json  session-start-hook.py
kiroku_memory/: __init__.py  api.py  classify.py  conflict.py  embedding_legacy.py  entity_resolution.py  extract.py  observability.py  priority.py  search.py  summarize.py
kiroku_memory/db/: __init__.py  config.py  database.py  (+3 more)
launchd/: com.kiroku-memory.monthly.plist  com.kiroku-memory.nightly.plist  com.kiroku-memory.weekly.plist  install.sh
memory/: __init__.py  api.py  classify.py  embedding.py  extract.py  ingest.py
scripts/: generate_dmg_bg.py  memory-status.py  migrate_backend.py  recall.py
skill/: SKILL.ja.md  SKILL.md  SKILL.zh-TW.md
tests/: __init__.py  test_confidence_propagation.py  test_embedding_auto_update.py  test_entity_resolution.py  test_models.py  test_multihop.py  test_reified.py  test_search_and_graph.py
tools/: .gitignore
(+76 files in other folders)
