[package]
name = "kiroku-memory-desktop"
version = "0.1.24"
description = "Kiroku Memory Desktop App POC"
authors = ["yelban <yelban@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"

# macOS Keychain for secure credential storage
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
cocoa = "0.26"
objc = "0.2"
block = "0.1"

# Non-macOS fallback for credential storage
[target.'cfg(not(target_os = "macos"))'.dependencies]
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
